<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Log_in_student">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/_200sdp"
        android:fitsSystemWindows="true"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"

        >
        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            app:layout_scrollFlags="scroll|snap|exitUntilCollapsed"
            app:expandedTitleMarginStart="@dimen/_20sdp"
            app:contentScrim="@color/colorPrimary"
            app:expandedTitleMarginEnd="@dimen/_20sdp"
            app:expandedTitleGravity="center|bottom"

            >

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/masged"
                android:scaleType="centerCrop"
                android:fitsSystemWindows="true"
                app:layout_collapseMode="parallax"
                android:id="@+id/log_student_image"
                />


            <androidx.appcompat.widget.Toolbar
                android:id="@+id/log_student_tool"
                android:layout_width="match_parent"
                android:layout_height="?actionBarSize"
                app:layout_collapseMode="pin"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
                app:title="@string/log_In" />


        </com.google.android.material.appbar.CollapsingToolbarLayout>

    </com.google.android.material.appbar.AppBarLayout>



    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"

        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"

            >
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:errorTextColor="#2196F3"
                android:layout_marginStart="@dimen/_30sdp"
                android:layout_marginEnd="@dimen/_30sdp"
                android:layout_marginTop="@dimen/_25sdp"
                android:textColorHint="@color/colorPrimary"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/log_student_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/log_on_name"
                    android:background="@drawable/log_center_et_name"
                    android:gravity="center"
                    android:textSize="@dimen/_22sdp"
                    android:padding="@dimen/_10sdp"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_30sdp"
                android:layout_marginEnd="@dimen/_30sdp"
                android:layout_marginTop="@dimen/_20sdp"
                app:errorTextColor="@color/colorPrimary"
                app:passwordToggleEnabled="true"
                app:passwordToggleTint="@color/colorPrimary"
                android:textColorHint="@color/colorPrimary"


                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/log_student_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/log_in_password"
                    android:background="@drawable/log_center_et_name"
                    android:gravity="center"
                    android:textSize="@dimen/_22sdp"
                    android:padding="@dimen/_10sdp"
                    />

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/log_student_btn_log"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_30sdp"
                android:layout_marginTop="@dimen/_20sdp"
                android:layout_marginEnd="@dimen/_30sdp"
                android:background="@drawable/log_in_center_btn"
                android:text="@string/log_In"
                android:textColor="#ffffff"
                android:textSize="@dimen/_25sdp"
                android:textStyle="bold"

                />

            <TextView
                android:id="@+id/log_student_tv_OR"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/_5sdp"
                android:text="@string/or"
                android:textSize="@dimen/_25sdp"
                android:textStyle="bold"
                android:textColor="@color/colorPrimaryDark"

                />

            <Button
                android:id="@+id/log_student_btn_sign"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_30sdp"
                android:layout_marginTop="@dimen/_5sdp"
                android:layout_marginEnd="@dimen/_30sdp"
                android:background="@drawable/log_in_center_btn"
                android:text="@string/sign_up"
                android:textColor="#ffffff"
                android:textSize="@dimen/_25sdp"
                android:textStyle="bold"

                />

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>


</androidx.coordinatorlayout.widget.CoordinatorLayout>




